--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@types/node": "^20.12.5",
     "@webgpu/types": "^0.1.40",
+    "decimal.js": "^10.4.3",
     "express": "^4.19.2",
     "gl-matrix": "^3.4.3",
     "http-proxy-middleware": "^3.0.0",
